--- a/battery.html
+++ b/battery.html
@@ -20,6 +20,7 @@
 			<progress max="100" value="0"></progress>
 			<output></output>
 		</dd>
+		<dd><img id="batteryImage" src="" alt="Robot image based on battery level" /></dd>
 	</dl>
 </body>
 
